--- a/releases/YouTube To MP3.app/Contents/Resources/app/package.json
+++ b/releases/YouTube To MP3.app/Contents/Resources/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "youtube-to-mp3",
   "productName": "YouTube To MP3",
-  "version": "1.0.0",
-  "description": "Convert YouTube videos to MP3 files and download them",
+  "version": "1.0.1",
+  "description": "Electron application to convert and download YouTube videos as MP3s",
   "author": "Lee Robinson",
   "license": "MIT",
   "homepage": "https://github.com/leerob/youtube-to-mp3",
