--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
-    "electron-reload": "^0.2.0",
+    "electron-is-dev": "^0.3.0",
+    "electron-reload": "^1.2.2",
     "react": "^0.14.8",
     "react-dom": "^0.14.7"
   },
