--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "babelify": "^7.2.0",
     "electron-is-dev": "^0.3.0",
     "electron-reload": "^1.2.2",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "^4.0.3",
     "react": "^0.14.8",
     "react-dom": "^0.14.7",
+    "sanitize-filename": "^1.6.1",
     "ytdl-core": "^0.18.3"
   },
   "devDependencies": {
