--- a/package.json
+++ b/package.json
@@ -25,23 +25,24 @@
     "mp3"
   ],
   "dependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.2.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
     "electron-is-dev": "^0.3.0",
     "electron-reload": "^1.2.2",
     "ffmpeg-binaries": "^3.2.2-3",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^4.0.3",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.7",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sanitize-filename": "^1.6.1",
     "ytdl-core": "^0.18.3"
   },
   "devDependencies": {
-    "electron-packager": "^9.1.0",
+    "electron-packager": "^10.1.0",
     "electron": "^1.7.9",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.7.2",
     "watchify": "^3.9.0"
   }
 }
