Fix package icon not found issue

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start": "electron main.js",
     "scss": "node-sass --watch public/scss -o public/css",
     "watch": "watchify app/app.js -t babelify -o public/js/bundle.js --debug --verbose",
-    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=/public/img/logo.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . --overwrite --platform=win32 --arch=x64 --icon=/public/img/logo.ico --prune=true --out=release-builds"
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=public/img/logo.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . --overwrite --platform=win32 --arch=x64 --icon=public/img/logo.ico --prune=true --out=release-builds"
   },
   "repository": {
     "type": "git",
