--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-to-mp3",
   "productName": "YouTube To MP3",
-  "version": "2.1.1",
+  "version": "2.1.0",
   "description": "Electron application to convert and download YouTube videos as MP3s",
   "author": "Lee Robinson",
   "license": "MIT",
@@ -9,7 +9,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "webpack": "webpack --config ./webpack.config.js",
+    "scss": "node-sass --watch public/scss -o public/css",
+    "watch": "watchify app/app.js -t babelify -o public/js/bundle.js --debug --verbose",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=public/img/logo.icns --prune=true --out=release-builds",
     "package-win": "electron-packager . --overwrite --platform=win32 --asar --arch=x64 --icon=public/img/logo.ico --prune=true --out=release-builds"
   },
@@ -24,6 +25,10 @@
     "mp3"
   ],
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
     "electron-is-dev": "^0.3.0",
     "electron-reload": "^1.2.2",
     "ffmpeg-binaries": "^3.2.2-3",
@@ -33,21 +38,12 @@
     "react-dom": "^16.2.0",
     "sanitize-filename": "^1.6.1",
     "smalltalk": "^2.5.1",
-    "webpack": "^3.10.0",
     "ytdl-core": "^0.18.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "electron": "^1.7.9",
     "electron-packager": "^10.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
+    "electron": "^1.7.9",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0"
+    "watchify": "^3.9.0"
   }
 }
