--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-to-mp3",
   "productName": "YouTube To MP3",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Electron application to convert and download YouTube videos as MP3s",
   "author": "Lee Robinson",
   "license": "MIT",
@@ -9,8 +9,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "scss": "node-sass --watch public/scss -o public/css",
-    "watch": "watchify app/app.js -t babelify -o public/js/bundle.js --debug --verbose",
+    "webpack": "webpack --config ./webpack.config.js",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=public/img/logo.icns --prune=true --out=release-builds",
     "package-win": "electron-packager . --overwrite --platform=win32 --asar --arch=x64 --icon=public/img/logo.ico --prune=true --out=release-builds"
   },
@@ -25,10 +24,6 @@
     "mp3"
   ],
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babelify": "^8.0.0",
     "electron-is-dev": "^0.3.0",
     "electron-reload": "^1.2.2",
     "ffmpeg-binaries": "^3.2.2-3",
@@ -37,12 +32,20 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sanitize-filename": "^1.6.1",
+    "webpack": "^3.10.0",
     "ytdl-core": "^0.18.3"
   },
   "devDependencies": {
-    "electron-packager": "^10.1.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
     "electron": "^1.7.9",
+    "electron-packager": "^10.1.0",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
-    "watchify": "^3.9.0"
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1"
   }
 }
